# ImageViewer

./: .clang-format  CMakeLists.txt  core.cmake  sdl2.cmake  vulkan.cmake
imgui/: CMakeLists.txt  cmake_install.cmake  imconfig.h  imgui_draw.cpp  imgui_impl_vulkan.cpp  imgui_internal.h  imgui_widgets.cpp
src/: args.cpp  args.h  folder_info.cpp  folder_info.h  log.cpp  log.h  main.cpp  main.h  platform.h  render.h  thumbnail.cpp  thumbnail.h  util.cpp  util.h  watcher.cpp
src/formats/: format_jpeg.cpp  format_jpegxl.cpp  format_png.cpp  format_win32_wic.cpp  imageloader.cpp  imageloader.h
src/render_sdl/: CMakeLists.txt  render_sdl.cpp  render_sdl.h
src/render_vk/: CMakeLists.txt  command_pool.cpp  descriptor_set.cpp  instance.cpp  present.cpp  render_pass.cpp  render_target.cpp  render_vk.cpp  render_vk.h  shader_compute.cpp  shader_image.cpp  swapchain.cpp  texture.cpp
src/render_vk/shaders/: _compile.bat  _compile.sh  filter.comp  filter.comp.u32  filters.glsl  image.frag  image.frag.u32  image.vert  image.vert.u32  image_base.glsl
src/ui/: imagelist.cpp  imagelist.h  imageview.cpp  imageview.h  settings.cpp  settings.h
src/win/: drag_drop.cpp  drag_drop.h  folder_monitor.cpp  platform_win32.cpp  platform_win32.h  undo_manager.cpp
